--- a/templates/pages/home.templ
+++ b/templates/pages/home.templ
@@ -1,7 +1,6 @@
 package pages
 
-// BodyContent defines HTML content.
-templ BodyContent() {
+templ Home() {
 	<div class="flex w-full" id="app">
 		<div class="bg-black w-20 h-20"></div>
 		<div class="w-20 h-20 bg-pink-500"></div>
