--- a/public/input.css
+++ b/public/input.css
@@ -1,3 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --color-bkg: 210 40% 98%;
+    --color-content: 217 32.6% 17.5%;
+    --color-accent1: 288 95.8% 90.6%;
+    --color-accent2: 168 83.8% 78.2%;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --color-bkg: 217 32.6% 17.5%;
+      --color-content: 210 40% 98%;
+      --color-accent1: 288 95.8% 60.6%;
+      --color-accent2: 168 83.8% 48.2%;
+    }
+  }
+
+  :root[data-theme="dark"] {
+    --color-bkg: 217 32.6% 17.5%;
+    --color-content: 210 40% 98%;
+    --color-accent1: 288 95.8% 60.6%;
+    --color-accent2: 168 83.8% 48.2%;
+  }
+
+  :root[data-theme="light"] {
+    --color-bkg: 210 40% 98%;
+    --color-content: 217 32.6% 17.5%;
+    --color-accent1: 288 95.8% 60.6%;
+    --color-accent2: 168 83.8% 48.2%;
+  }
+}
