--- a/templates/index.templ
+++ b/templates/index.templ
@@ -2,7 +2,10 @@ package templates
 
 templ Index(
 	title string,
-	bodyContent templ.Component) {
+	bodyContent templ.Component,
+	header templ.Component,
+	footer templ.Component,
+) {
 	<!DOCTYPE html>
 	<html lang="en" class="no-js">
 		<head>
@@ -11,11 +14,12 @@ templ Index(
 			<link rel="preconnect" href="https://fonts.googleapis.com"/>
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
 			<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet"/>
-			<title>Ohio B2B</title>
+			<title>{ title }</title>
 			<script type="module">
     document.documentElement.classList.remove('no-js');
     document.documentElement.classList.add('js');
   </script>
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet"/>
 			<link rel="stylesheet" href="/public/output.css"/>
 			<meta name="keywords" content="B2Bin"/>
 			<meta name="description" content="It's time to B2 b2b2b2b2 B"/>
@@ -39,67 +43,16 @@ templ Index(
 			<meta name="theme-color" content="#FF00FF"/>
 		</head>
 		<body class="bg-bkg text-content">
-			<header class="flex justify-around items-center">
-				<a href="/" id="logo" class="w-10">
-					<img id="logo-pic" src="/public/assets/b2blogo.png" alt="b2b logo"/>
-				</a>
-				<div class="flex gap-4">
-					<div class="cursor-pointer">Products</div>
-					<div class="cursor-pointer">Location</div>
-					<div class="cursor-pointer">Contact</div>
-					<button id="theme-toggle" class="" type="button">
-						<svg
-							id="sun"
-							class="sun"
-							xmlns="http://www.w3.org/2000/svg"
-							width="30"
-							height="30"
-							viewBox="0 0 24 24"
-							fill="none"
-							stroke="currentColor"
-							stroke-width="2"
-							stroke-linecap="round"
-							stroke-linejoin="round"
-							class="feather feather-sun"
-						>
-							<circle cx="12" cy="12" r="5"></circle>
-							<line x1="12" y1="1" x2="12" y2="3"></line>
-							<line x1="12" y1="21" x2="12" y2="23"></line>
-							<line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
-							<line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
-							<line x1="1" y1="12" x2="3" y2="12"></line>
-							<line x1="21" y1="12" x2="23" y2="12"></line>
-							<line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
-							<line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
-						</svg>
-						<svg
-							id="moon"
-							class="moon"
-							xmlns="http://www.w3.org/2000/svg"
-							width="30"
-							height="30"
-							viewBox="0 0 24 24"
-							fill="none"
-							stroke="currentColor"
-							stroke-width="2"
-							stroke-linecap="round"
-							stroke-linejoin="round"
-							class="feather feather-moon"
-						>
-							<path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
-						</svg>
-					</button>
-				</div>
-			</header>
+			<i class="bi bi-house"></i>
+			@header
 			<section class="min-h-[90vh] px-8 md:px-12 lg-px-16 py-24">
 				<!-- Where you import content -->
 				@bodyContent
 			</section>
 			<hr/>
-			<footer class="flex justify-center">
-				<div>Ohio B2Bizzle</div>
-			</footer>
+			@footer
 			<script src="/public/scripts.js"></script>
+			<script src="/public/header.js"></script>
 		</body>
 	</html>
 }
