--- a/templates/index.templ
+++ b/templates/index.templ
@@ -15,10 +15,10 @@ templ Index(
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
 			<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet"/>
 			<title>{ title }</title>
-			<script type="module">
-    document.documentElement.classList.remove('no-js');
-    document.documentElement.classList.add('js');
-  </script>
+			<script type="module"> document.documentElement.classList.remove('no-js'); document.documentElement.classList.add('js'); </script>
+			<script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
+			<!-- htmx extension for handling errors -->
+			<script src="https://unpkg.com/htmx-ext-response-targets@2.0.0/response-targets.js"></script>
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet"/>
 			<link rel="stylesheet" href="/public/output.css"/>
 			<meta name="keywords" content="B2Bin"/>
@@ -43,7 +43,6 @@ templ Index(
 			<meta name="theme-color" content="#FF00FF"/>
 		</head>
 		<body class="bg-bkg text-content">
-			<i class="bi bi-house"></i>
 			@header
 			<section class="min-h-[90vh] px-8 md:px-12 lg-px-16 py-24">
 				<!-- Where you import content -->
@@ -51,8 +50,7 @@ templ Index(
 			</section>
 			<hr/>
 			@footer
-			<script src="/public/scripts.js"></script>
-			<script src="/public/header.js"></script>
+			<script src="/public/scripts/index.js"></script>
 		</body>
 	</html>
 }
